0.2.1
-----

Meeting_Setup: logout_url parameter changed from None to ''.
               This points to the default url given in the config of bigbluebutton.


0.2.0
-----
Meeting_Setup: logout_url, max_participants, duration and welcome parameter added
Meeting: end_meeting_url added

0.1.1
-----
minor bug fix

0.1.0
-----
initial version of bigbluebutton python api with some creation parameters
based on https://github.com/schallis/django-bigbluebutton 98f2259fa3 by Steve Challis.
